Bug 587715 - Include Qt headers before anything else because of conflicts with X and mozalloc. r=bustage fix